--- a/.github/workflows/aggtrades-incremental.yml
+++ b/.github/workflows/aggtrades-incremental.yml
@@ -1,4 +1,3 @@
-# .github/workflows/aggtrades-incremental.yml
 name: "4️⃣📥🛠️ aggTrades Inc. Download & Feat."
 
 on:
@@ -34,8 +33,7 @@ jobs:
           python-version: '3.12'
 
       - name: Install dependencies
-        run: |
-          pip install --upgrade pandas pyarrow
+        run: pip install --upgrade pandas pyarrow
 
       - name: Calc dates
         id: dates
@@ -111,19 +109,10 @@ jobs:
           OLD=$(ls $DIR/${SYMBOL}-features-${GS}_to_*.parquet 2>/dev/null | sort | tail -n1 || true)
 
           if [[ -n "$OLD" ]]; then
-            # wir übergeben alle vier Pfade/Variablen als Argumente an Python
-            python3 - "$OLD" "$DIR" "$SYMBOL" "$OUT" << 'PYCODE'
-import pandas as pd
-import os, sys
-
-old_path, dir_path, symbol, out_path = sys.argv[1:]
-new_path = os.path.join(dir_path, f"tmp_{symbol}.parquet")
-
-old = pd.read_parquet(old_path)
-new = pd.read_parquet(new_path)
-df  = pd.concat([old, new]).sort_index()
-df.to_parquet(out_path, compression="snappy")
-PYCODE
+            python3 append_aggtrades.py \
+              "$OLD" \
+              "$DIR/tmp_${SYMBOL}.parquet" \
+              "$OUT"
             rm "$OLD"
           else
             mv "$DIR/tmp_${SYMBOL}.parquet" "$OUT"
